# confidence-ai-plugins

./: .mcp.json  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  gemini-extension.json  marketplace.json  release-please-config.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: marketplace.json  plugin.json
commands/: migrate-optimizely.md  migrate-posthog.md  migrate-statsig.md  onboard-confidence-dry-run.md  setup-warehouse-bigquery.md  setup-warehouse-databricks.md  setup-warehouse-redshift.md  setup-warehouse-snowflake.md  setup-warehouse.md
hooks/: hooks.json  session_end_telemetry.py  telemetry_hook.py
skills/_shared/: migration-core.md
skills/migrate-eppo/: SKILL.md
skills/migrate-eppo/test-fixtures/: README.md  server.py  verify_migration.py
skills/migrate-optimizely/: SKILL.md
skills/migrate-optimizely/test-fixtures/: README.md  server.py
skills/migrate-posthog/: SKILL.md
skills/migrate-statsig/: SKILL.md
skills/migrate-statsig/test-fixtures/phase2-examples/rust-server/: Cargo.toml
skills/migrate-statsig/test-fixtures/phase2-examples/rust-server/before/: statsig_app.rs
skills/migrate-statsig/test-fixtures/phase2-examples/rust-server/src/: main.rs
skills/onboard-confidence/: SKILL.md
skills/onboard-confidence-dry-run/: SKILL.md
skills/setup-warehouse/: SKILL.md
skills/setup-warehouse-bigquery/: SKILL.md
skills/setup-warehouse-databricks/: SKILL.md
skills/setup-warehouse-redshift/: SKILL.md
skills/setup-warehouse-snowflake/: SKILL.md
skills/telemetry/: TELEMETRY.md
(+38 files in other folders)
